# CMPCC

./: .gitignore  README.md  install_tools.sh  key2joy.py  simulation.sh
osqp/: CMakeLists.txt
osqp/lin_sys/direct/qdldl/qdldl_sources/: README.md
src/cmpcc/: CMakeLists.txt  package.xml  readme.md
src/cmpcc/config/: 3d.rviz  corridor.yaml  mpcParameters.yaml  traj.yaml
src/cmpcc/include/: corridor.h  display_msgs.h  map.h  model.h  mpc_solver.h  my_spline.h  osqp_interface.h  sparse_utils.h
src/cmpcc/launch/: flyfly.launch  plot_bag.launch  vis_bag.launch
src/cmpcc/src/: bezier_base.cpp  corridor.cpp  corridor_test.cpp  display_msg.cpp  fly_trr_node.cpp  flyfly_node.cpp  map.cpp  model.cpp  mpc_solver.cpp  my_spline.cpp  osqp_interface.cpp  osqp_test.cpp  plot_bag_node.cpp  simulation_node.cpp  solver_test.cpp
src/simulation/environment/: CMakeLists.txt  package.xml
src/simulation/environment/config/: map.pcd  rviz_config.rviz  rviz_vis.rviz
src/simulation/environment/launch/: map_generator.launch
src/simulation/environment/src/: generate_map_node.cpp
src/simulation/local_sensing/: CMakeLists.txt
src/simulation/local_sensing/launch/: sensing.launch
src/simulation/local_sensing/src/: pointcloud_render_node.cpp
src/simulation/plan_env/: CMakeLists.txt
src/simulation/plan_env/launch/: planning.launch
src/simulation/plan_env/src/: plan_env_node.cpp  sdf_map.cpp
src/simulation/so3_control/src/: SO3Control.cpp  so3_control_nodelet.cpp
src/simulation/so3_disturbance_generator/cfg/: disturbance_ui.cfg
src/simulation/so3_disturbance_generator/src/: so3_disturbance_generator.cpp
src/simulation/so3_quadrotor_simulator/: CMakeLists.txt  package.xml
src/simulation/so3_quadrotor_simulator/include/ode/boost/numeric/odeint/util/: bind.hpp
src/simulation/so3_quadrotor_simulator/include/ode/libs/numeric/odeint/doc/: details_bind_member_functions.qbk  details_boost_ref.qbk  examples_table.qbk  tutorial_harmonic_oscillator.qbk  tutorial_solar_system.qbk  tutorial_vexcl_opencl.qbk
src/simulation/so3_quadrotor_simulator/launch/: simulator.launch  visualization.launch
src/simulation/so3_quadrotor_simulator/src/: quadrotor_simulator_so3.cpp
src/simulation/so3_quadrotor_simulator/src/dynamics/: Quadrotor.cpp
src/uav_simulator/DecompRos/decomp_ros_utils/: CMakeLists.txt
src/uav_simulator/map_generator/: CMakeLists.txt  package.xml
src/uav_simulator/map_generator/launch/: map_generator.launch
src/uav_simulator/map_generator/src/: map_generator_node.cpp
src/uav_simulator/quadrotor_msgs/: CMakeLists.txt  package.xml
src/uav_simulator/quadrotor_msgs/msg/: AuxCommand.msg
src/uav_simulator/so3_controller/: CMakeLists.txt  nodelet_plugin.xml  package.xml
src/uav_simulator/so3_controller/include/so3_controller/: so3_controller.hpp
src/uav_simulator/so3_controller/src/: so3_controller_nodelet.cpp
src/uav_simulator/so3_quadrotor/: CMakeLists.txt  nodelet_plugin.xml  package.xml
src/uav_simulator/so3_quadrotor/include/so3_quadrotor/: geometry_utils.hpp  quadrotor_dynamics.hpp
src/uav_simulator/so3_quadrotor/src/: so3_quadrotor_nodelet.cpp
src/uav_simulator/uav_simulator/: CMakeLists.txt  package.xml
src/uav_simulator/uav_simulator/config/: rviz_config.rviz  so3_controller.yaml  so3_quadrotor.yaml
src/uav_simulator/uav_simulator/launch/: uav_simulator.launch
src/utils/DecompRos/decomp_ros_msgs/: CMakeLists.txt
src/utils/DecompRos/decomp_ros_utils/: CMakeLists.txt
src/utils/catkin_simple/: CMakeLists.txt
src/utils/odom_visualization/: CMakeLists.txt
src/utils/odom_visualization/src/: odom_visualization.cpp
src/utils/pose_utils/: CMakeLists.txt
src/utils/rviz_plugins/src/: aerialmap_display.cpp  probmap_display.cpp
src/utils/uav_utils/: CMakeLists.txt
