<?xml version="1.0"?>
<package format="2">
  <name>environment</name>
  <version>0.0.0</version>
  <description>The environment package</description>

  <maintainer email="soviet@todo.todo">soviet</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
