<?xml version="1.0"?>
<package format="2">
  <name>map_generator</name>
  <version>0.0.0</version>
  <description>The map_generator package</description>

  <maintainer email="jlji@zju.edu.cn">soviet</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
  </export>
</package>
