<?xml version="1.0"?>
<package format="2">
  <name>quadrotor_msgs</name>
  <version>0.0.0</version>
  <description>The quadrotor_msgs package</description>

  <maintainer email="jlji@zju.edu.cn">ji</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>geometry_msgs</depend>

</package>
